--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -3,7 +3,8 @@
     <% for( var i = 0; i < overdueTodos.length; i++) { %>
     <li class="Todo-item">
         <div class="flex items-center w-fit my-2 px-2 py-1 hover:bg-purple-50 rounded">
-            <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 test-blue-600 border-gray-300">
+            <%= i %>
+            <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 test-blue-600 border-gray-300 ml-2">
             <label for="todo-checkbox-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer"><%= overdueTodos[i].title %></label>
             <a href="#" class="hidden trash-icon ml-2">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
@@ -22,7 +23,8 @@
     <% for( var i = 0; i < dueTodayTodos.length; i++) { %>
     <li class="Todo-item">
         <div class="flex items-center w-fit my-2 px-2 py-1 hover:bg-purple-50 rounded">
-            <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 test-blue-600 border-gray-300">
+            <%= i %>
+            <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 test-blue-600 border-gray-300 ml-2">
             <label for="todo-checkbox-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer"><%= dueTodayTodos[i].title %></label>
             <a href="#" class="hidden trash-icon ml-2">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
@@ -41,7 +43,8 @@
     <% for( var i = 0; i < dueLaterTodos.length; i++) { %>
     <li class="Todo-item">
         <div class="flex items-center w-fit my-2 px-2 py-1 hover:bg-purple-50 rounded">
-            <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 test-blue-600 border-gray-300">
+            <%= i %>
+            <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 test-blue-600 border-gray-300 ml-2">
             <label for="todo-checkbox-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer"><%= dueLaterTodos[i].title %></label>
             <a href="#" class="hidden trash-icon ml-2">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
