--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -14,7 +14,7 @@
         </div>
     </li>
     <% } %>
-    <%= overdueTodos.length %>
+    <p><%= overdueTodos.length %></p>
 </ul>
 
 
@@ -34,7 +34,7 @@
         </div>
     </li>
     <% } %>
-    <%= dueTodayTodos.length %>
+    <p><%= dueTodayTodos.length %></p>
 </ul>
 
 
@@ -54,6 +54,6 @@
         </div>
     </li>
     <% } %>
-    <%= dueLaterTodos.length %>
+    <p><%= dueLaterTodos.length %></p>
 </ul>
 
