--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,6 +1,5 @@
-
-<h5><%= title %>
-<span class="px-2 py-1 bg-gray-300 text-gray-900 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-300 justify-center items-center items" id="c1"><%= Due.length %></span></h5>
+<h5><%= title %></h5>
+<span id="<%= title %>-1" class="px-2 py-1 bg-gray-300 text-gray-900 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-300 justify-center items-center items" ><%= Due.length %></span>
 
 
 <ul class="list-none">
