--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <script>
+        function updateTodo(id) {
+            fetch(`/todos/${id}/markAsCompleted`, {
+                method: "PUT",
+                headers: { 
+                    "Content-Type": "application/json",
+                },
+            })
+                .then((res) => {
+                    if (res.ok) {
+
+                        window.location.reload();
+                    }
+                })
+                .catch((err) => console.error(err));
+        }
+    </script>
 </head>
 <body>
     <div class="grid grid-cols-6">
