--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -17,7 +17,19 @@
             })
                 .then((res) => {
                     if (res.ok) {
+                        window.location.reload();
+                    }
+                })
+                .catch((err) => console.error(err));
+        }
 
+        function deleteTodo(id) {
+            fetch(`/todos/${id}` , {
+                method: "DELETE",
+                headers: { "Content-Type": "applications/json" },
+            })
+                .then((res) => {
+                    if (res.ok) {
                         window.location.reload();
                     }
                 })
