--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -78,6 +78,7 @@
                 <%- include('todos.ejs', { title: "Due Later", Due: dueLaterTodos, id: "count-due-later" }) %>
                 <%- include('todos.ejs', { title: "Completed Items", Due: completedTodos, id: "count-completed" }) %>
             </div>
+            <%- include('footer.ejs') %>
         </div>
     </div>
 </body>
