--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf_token" content="<%= csrfToken %>">
-    <title>Todo List </title>
+    <title>
+        <%= title %>
+
+    </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <script>
@@ -54,6 +57,9 @@
         <!--Header Start-->
         <%- include("header.ejs") %>
         <!--Header End-->
+        <p class="py-2">Welcome to the To-Do Manager</p>
+        <p class="py-2">New here? <a href="/signup" class="text-green-600">Sign-up now</a></p>
+        <p class="py-2">Already have an account? <a href="/login" class="text-green-600">Sign-in</a></p>
         <form action="/todos" method="post">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <div class="flex gap-2 py-4">
