--- a/todo-app/views/login.ejs
+++ b/todo-app/views/login.ejs
@@ -20,7 +20,15 @@
             <h6 class="py-4">Signu In</h6>
             <div>
             
-            <%- include("notifications.ejs") %>
+            <div>
+                <% if(messages && messages.error && messages.error.length > 0)  { %>
+                    <% for(var i=0; i<messages.error.length; i++) { %>
+                            <li style="list-style-type: none; color: red;" > 
+                                <%= messages.error[i] %>
+                            </li>
+                    <% } %>
+                <% } %>
+            </div>
 
             <form action="/session" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
