--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -18,6 +18,17 @@
             <%- include("header.ejs") %>
             <!--Header End-->
             <h6 class="py-4">Signup as a new user</h6>
+
+            <div>
+                <% if(messages && messages.error && messages.error.length > 0)  { %>
+                    <% for(var i=0; i<messages.error.length; i++) { %>
+                            <li style="list-style-type: none; color: red;" > 
+                                <%= messages.error[i] %>
+                            </li>
+                    <% } %>
+                <% } %>
+            </div>
+
             <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="py-3">
